--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to RobotRumble</h1>
+        <h1>Welcome to RoboRumble</h1>
     </header>
     <main>
         <section id="game-container">
